--- a/Components/About/about.styles.scss
+++ b/Components/About/about.styles.scss
@@ -9,11 +9,11 @@
     padding-top: 150px;
   }
 
-  .contentWrapper {
+  .content-wrapper {
     width: 50%;
   }
 
-  .imgWrapper {
+  .img-wrapper {
     width: 40%;
   }
 }
@@ -25,11 +25,11 @@
       padding-top: 100px;
     }
 
-    .contentWrapper {
+    .content-wrapper {
       width: 100%;
     }
 
-    .imgWrapper {
+    .img-wrapper {
       margin: 0 auto 50px;
       max-width: 500px;
       width: 80%;
