--- a/Components/Header/header.styles.scss
+++ b/Components/Header/header.styles.scss
@@ -1,4 +1,4 @@
-header.mainHeader {
+header.main-header {
   position: fixed;
   width: 100%;
   top: 0;
@@ -20,7 +20,7 @@ header.mainHeader {
   }
 }
 
-button.logo {
+.logo {
   background: transparent;
   border: 0;
   outline: 0;
@@ -36,13 +36,14 @@ nav.nav {
     margin: 0;
   }
 
-  li.menuItem {
+  li.menu-item {
     list-style: none;
     padding: 0;
     margin: 0;
   }
 
-  button.scroll {
+  li.menu-item > * {
+    display: block;
     position: relative;
     background: transparent;
     outline: 0;
@@ -50,7 +51,9 @@ nav.nav {
     font-family: 'Bebas Neue', cursive;
     font-size: 24px;
     padding: 10px 0;
-    margin: 20px;
+    margin: 10px 20px;
+    color: inherit;
+    text-decoration: none;
 
     &:after {
       position: absolute;
@@ -74,7 +77,7 @@ nav.nav {
   }
 }
 
-button.mobileTrigger {
+button.mobile-trigger {
   display: none;
   position: relative;
   background: transparent;
@@ -128,7 +131,7 @@ button.mobileTrigger {
 }
 
 @media screen and (max-width: 767px) {
-  header.mainHeader {
+  header.main-header {
     .container {
       padding-top: 20px;
       padding-bottom: 20px;
@@ -145,7 +148,7 @@ button.mobileTrigger {
     }
   }
 
-  button.mobileTrigger {
+  button.mobile-trigger {
     display: block;
   }
 
