--- a/Components/Podcast/podcast.styles.scss
+++ b/Components/Podcast/podcast.styles.scss
@@ -4,7 +4,6 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
-        margin-top: 30px;
 
         a {
             display: block;
@@ -20,6 +19,7 @@
 
     iframe {
         border: none;
-        height: 360px;
+        height: 300px;
+        margin: 30px 0 10px;
     }
 }
