--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,7 @@ $font-body: 'Lato', sans-serif;
 
 $grey: #3A3A3A;
 $black: #1F1F1F;
+$red: #CA0E02;
 
 html {
   scroll-behavior: smooth;
@@ -98,9 +99,13 @@ button {
 @import '../Components/YouTube/video-list.styles.scss';
 @import '../Components/YouTube/video.styles.scss';
 @import '../Components/Podcast/podcast.styles.scss';
+@import '../Components/Podcast-Badges/podcast-badges.styles.scss';
 @import '../Components/Articles/articles-list.styles.scss';
 @import '../Components/Articles/articles.styles.scss';
 @import '../Components/Contact/contact.styles.scss';
 @import '../Components/Form/form.styles.scss';
 @import '../Components/Instagram/instagram.styles.scss';
 @import '../Components/Footer/footer.styles.scss';
+@import '../Components/Podcast-Banner/podcast-banner.styles.scss';
+@import '../Components/Podcast-Episodes/podcast-episodes.styles.scss';
+@import '../Components/Podcast-Episodes/episode-card.styles.scss';
