Episode page complete

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -109,3 +109,10 @@ button {
 @import '../Components/Podcast-Banner/podcast-banner.styles.scss';
 @import '../Components/Podcast-Episodes/podcast-episodes.styles.scss';
 @import '../Components/Podcast-Episodes/episode-card.styles.scss';
+
+// Episode Page
+@import '../Components/Episode/episode.styles.scss';
+@import '../Components/Episode/Back/back.styles.scss';
+@import '../Components/Episode/Title/title.styles.scss';
+@import '../Components/Episode/Media/media.styles.scss';
+@import '../Components/Episode/Description/description.styles.scss';
