--- a/Components/Podcast-Episodes/podcast-episodes.styles.scss
+++ b/Components/Podcast-Episodes/podcast-episodes.styles.scss
@@ -4,6 +4,10 @@
         font-size: 60px;
         margin-bottom: 20px;
     }
+
+    .btn-center {
+        margin-top: 50px;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -11,6 +15,10 @@
         h2 {
             font-size: 36px;
             text-align: left;
+        }
+
+        .btn-center {
+            margin-top: 30px;
         }
     }
 }
