changed to firebase

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -116,3 +116,6 @@ button {
 @import '../Components/Episode/Title/title.styles.scss';
 @import '../Components/Episode/Media/media.styles.scss';
 @import '../Components/Episode/Description/description.styles.scss';
+
+// Admin
+@import '../Components/Admin/Form/form.styles.scss';
