--- a/Components/Admin/Form/form.styles.scss
+++ b/Components/Admin/Form/form.styles.scss
@@ -1,5 +1,51 @@
+.admin-header {
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+    }
+}
+
 .admin-form {
-    .home-btn {
-        color: white;
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-top: 80px;
+
+        .MuiTextField-root {
+            margin: 10px 0;
+        }
+
+        .title {
+            width: 75%;
+        }
+
+        .date {
+            width: 23%;
+        }
+    }
+
+    .ep-wysiwyg {
+        width: 100%;
+        margin: 20px 0;
+
+        h2 {
+            font-family: $font-body;
+            font-size: 18px;
+            margin-bottom: 5px;
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .admin-form {
+        .container {
+            .title,
+            .date {
+                width: 100%;
+            }
+        }
     }
 }
