Delete episode functionality

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -119,3 +119,4 @@ button {
 
 // Admin
 @import '../Components/Admin/Form/form.styles.scss';
+@import '../Components/Admin/Episode-Item/episode-item.styles.scss';
