--- a/Components/Admin/Form/form.styles.scss
+++ b/Components/Admin/Form/form.styles.scss
@@ -1,4 +1,11 @@
 .admin-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: white;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+
     .container {
         display: flex;
         justify-content: space-between;
