--- a/Components/Admin/Episode-Item/episode-item.styles.scss
+++ b/Components/Admin/Episode-Item/episode-item.styles.scss
@@ -16,4 +16,10 @@
         font-size: 16px;
         margin: 0;
     }
+
+    .actions {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
