--- a/Components/Admin/Form/admin-form.styles.scss
+++ b/Components/Admin/Form/admin-form.styles.scss
@@ -30,6 +30,10 @@
     }
 }
 
+.CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
+    background: transparent !important;
+}
+
 @media screen and (max-width: 767px) {
     .admin-form {
         .container {
