--- a/Components/Admin/Form/admin-form.styles.scss
+++ b/Components/Admin/Form/admin-form.styles.scss
@@ -25,7 +25,15 @@
         h2 {
             font-family: $font-body;
             font-size: 18px;
-            margin-bottom: 5px;
+            background: $grey;
+            color: white;
+            padding: 5px 15px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+
+        p, li, span {
+            font-size: 16px;
         }
     }
 }
