--- a/Components/Admin/Episode-Item/episode-item.styles.scss
+++ b/Components/Admin/Episode-Item/episode-item.styles.scss
@@ -1,4 +1,8 @@
 .episode-item {
+    &:last-child {
+        margin-bottom: 40px;
+    }
+    
     .container {
         padding-top: 15px;
         padding-bottom: 15px;
