--- a/Components/Admin/Header/admin-header.styles.scss
+++ b/Components/Admin/Header/admin-header.styles.scss
@@ -5,6 +5,7 @@
     width: 100%;
     background: white;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    z-index: 5;
 
     .container {
         display: flex;
