Added loading spinner to podcast page

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -109,6 +109,7 @@ button {
 @import '../Components/Podcast-Banner/podcast-banner.styles.scss';
 @import '../Components/Podcast-Episodes/podcast-episodes.styles.scss';
 @import '../Components/Podcast-Episodes/episode-card.styles.scss';
+@import '../Components/Loader/loader.styles.scss';
 
 // Episode Page
 @import '../Components/Episode/episode.styles.scss';
