Added nav CTA; removed IG block

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Lato&display=swap');
 
-$font-title: 'Bebas Neue', cursive;
+$font-title: 'Bebas Neue', sans-serif;
 $font-body: 'Lato', sans-serif;
 
 $grey: #3A3A3A;
