--- a/Components/Contact/contact.styles.scss
+++ b/Components/Contact/contact.styles.scss
@@ -1,17 +1,29 @@
+.contact {
+  background: #DEE8F1;
+  
+  h2 {
+    text-align: center;
+  }
+}
+
 .contact-wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   margin-top: 40px;
 
   .content-wrapper {
-    width: 40%;
+    width: 50%;
+  }
+
+  .social-group {
+    text-align: center;
   }
 }
 
 .email-wrapper {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 
   img {
