--- a/Components/Footer/footer.styles.scss
+++ b/Components/Footer/footer.styles.scss
@@ -1,5 +1,4 @@
 footer {
-  background: #DEE8F1;
   text-align: center;
 
   .container {
@@ -11,7 +10,11 @@ footer {
     margin: 0;
 
     span {
-      display: inline-block;
+      position: absolute;
+      visibility: hidden;
+      opacity: 0;
+      height: 0;
+      width: 0;
     }
   }
 
