--- a/Components/Form/form.styles.scss
+++ b/Components/Form/form.styles.scss
@@ -21,6 +21,7 @@
 .contact {
   form {
     margin-top: 40px;
+    text-align: center;
 
     h3 {
       font-size: 20px;
@@ -33,6 +34,10 @@
     > div > div {
       width: 100%;
       margin-bottom: 20px;
+
+      > div:not(.MuiInput-root) {
+        margin: auto;
+      }
     }
 
     .MuiInputBase-inputMultiline {
