--- a/Components/Header/header.styles.scss
+++ b/Components/Header/header.styles.scss
@@ -1,12 +1,13 @@
 header.main-header {
   position: fixed;
   width: 100%;
-  top: 0;
+  top: 10px;
   left: 0;
   z-index: 5;
   transition: all 0.2s ease;
 
   &.sticky {
+    top: 0;
     background: white;
     box-shadow: 0 5px 20px rgba(0,0,0,0.04);
   }
@@ -74,6 +75,26 @@ nav.nav {
         width: 100%;
       }
     }
+
+    &.cta {
+      background: #3A3A3A;
+      color: white;
+      border: 0;
+      margin-right: 0;
+      padding: 5px 20px;
+      transition: all 0.2s ease;
+
+      &:after {
+        display: none;
+      }
+
+      &:hover,
+      &:focus {
+        background: #515151;
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+      }
+    }
   }
 }
 
@@ -130,7 +151,7 @@ button.mobile-trigger {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 950px) {
   header.main-header {
     .container {
       padding-top: 20px;
